--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <div class="portrait" style="background-image: url(static/image/ouyangshengbin.png);"></div>
+                <div class="portrait"></div>
                 <div class="remodal remodal-img" data-remodal-id="portrait-modal">
                     <h3>请输入图片URL地址：</h3>
                     <br/>
