修改简历内容

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <li>
                         <h3>做市商系统</h3>
                         <p>
-                            确定引入做市商制度后，为了更好发挥做市商活跃商品期权期货交易市场的作用，采用适当措施提高做市商履行做市义务的积极性：期权做市商子系统开发6项核心指标与7项参考指标为每个期权做市商计算月度、年度得分；期货做市商子系统通过统计持续报价、成交、持仓三类义务数据，进行手续费减收计算。系统启动后将向trdapi(交易流水转发api，接受tre_server事件流并转发)注册对应交易事件监听器（包括各类入单、撤单、成交等事件），对监听到的各类事件进行适配（获取流水中本次计算所需字段）后，启用异步队列（基于线程池实现）计算业务指标操作数缓存、维护市场行情；待接受到闭市事件后，启动期权、期货计算器，根据盘中累计缓存计算义务指标并落库、落文件操作<div>框架使用SpringMVC+JdbcTemplate框架，使用redis维护订单薄，使用异步队列解耦各项指标计算业务模块与订单薄维护模块，同时提升性能</div>
+                            确定引入做市商制度后，为了更好发挥做市商活跃商品期权期货交易市场的作用，采用适当措施提高做市商履行做市义务的积极性：期权做市商子系统开发6项核心指标与7项参考指标为每个期权做市商计算月度、年度得分；期货做市商子系统通过统计持续报价、成交、持仓三类义务数据，进行手续费减收计算。系统启动后将向trdapi(交易流水转发api，接受tre_server事件流并转发)注册对应交易事件监听器（包括各类入单、撤单、成交等事件），对监听到的各类事件进行适配（获取流水中本次计算所需字段）后，启用异步队列（基于线程池实现）计算业务指标操作数缓存、维护市场行情；待接受到闭市事件后，启动期权、期货计算器，根据盘中累计缓存计算义务指标并落库、落文件操作<div>整体使用Spring框架进行开发，使用redis维护订单薄，使用异步队列解耦各项指标计算业务模块与订单薄维护模块，同时提升性能</div>
                         </p>
                     </li>
                 </ul>
